# sales-prediction

./: .gitignore  README.md  pyproject.toml  Завдання.txt
data/: df_future_predictions.csv
notebooks/: eda.ipynb  predict.ipynb  results.ipynb
src/: dataset.py  inference.py  model.py  train.py
src/model/: __init__.py
