[tool.poetry]
name = "sales-prediction"
version = "0.1.0"
description = ""
authors = ["Oleh Toporkov <oleh.toporkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.20.30"
scikit-learn = "^1.5.0"
urllib3 = "1.26"
pyarrow = "^16.1.0"
holidays = "^0.49"
lightgbm = "^4.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
